Fix: Some API Mistake
