# routes/api.php
@@ -6,11 +6,11 @@ use App\Http\Controllers\TasksController;
 use App\Http\Controllers\CategoryController;
 
 Route::get('/categories', [CategoryController::class, 'index']);
-Route::put('/categories', [CategoryController::class, 'store']);
+Route::post('/categories/add', [CategoryController::class, 'store']);
 Route::delete('/categories/{id}', [CategoryController::class, 'delete']);
 
 Route::post('/tasks', [TasksController::class, 'index']);
-Route::put('/tasks', [TasksController::class, 'store']);
+Route::post('/tasks/add', [TasksController::class, 'store']);
 Route::post('/tasks/{id}', [TasksController::class, 'update']);
 Route::patch('/tasks/{id}/complete', [TasksController::class, 'markAsCompleted']);
 Route::delete('/tasks/{id}', [TasksController::class, 'delete']);
